@@ -16,13 +16,13 @@
 package com.netflix.zuul.message.http;
 
 import com.google.common.base.Strings;
-import com.google.common.collect.ArrayListMultimap;
 import com.google.common.collect.ImmutableListMultimap;
 import com.google.common.collect.Iterables;
+import com.google.common.collect.LinkedListMultimap;
 import com.google.common.collect.ListMultimap;
-import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.Collection;
 import java.util.HashMap;
 import java.util.List;
@@ -39,10 +39,10 @@ import java.util.StringTokenizer;
 public class HttpQueryParams implements Cloneable {
     private final ListMultimap<String, String> delegate;
     private final boolean immutable;
-    private final HashMap<String, Boolean> trailingEquals;
+    private final Map<String, Boolean> trailingEquals;
 
     public HttpQueryParams() {
-        delegate = ArrayListMultimap.create();
+        delegate = LinkedListMultimap.create();
         immutable = false;
         trailingEquals = new HashMap<>();
     }
@@ -70,8 +70,8 @@ public class HttpQueryParams implements Cloneable {
                 String value = s.substring(i + 1);
 
                 try {
-                    name = URLDecoder.decode(name, "UTF-8");
-                    value = URLDecoder.decode(value, "UTF-8");
+                    name = URLDecoder.decode(name, StandardCharsets.UTF_8);
+                    value = URLDecoder.decode(value, StandardCharsets.UTF_8);
                 } catch (Exception e) {
                     // do nothing
                 }
@@ -84,11 +84,11 @@ public class HttpQueryParams implements Cloneable {
                 }
             }
             // key only
-            else if (s.length() > 0) {
+            else if (!s.isEmpty()) {
                 String name = s;
 
                 try {
-                    name = URLDecoder.decode(name, "UTF-8");
+                    name = URLDecoder.decode(name, StandardCharsets.UTF_8);
                 } catch (Exception e) {
                     // do nothing
                 }
@@ -106,10 +106,8 @@ public class HttpQueryParams implements Cloneable {
      */
     public String getFirst(String name) {
         List<String> values = delegate.get(name);
-        if (values != null) {
-            if (values.size() > 0) {
-                return values.get(0);
-            }
+        if (!values.isEmpty()) {
+            return values.get(0);
         }
         return null;
     }
@@ -124,7 +122,7 @@ public class HttpQueryParams implements Cloneable {
 
     /**
      * Per https://tools.ietf.org/html/rfc7230#page-19, query params are to be treated as case sensitive.
-     * However, as an utility, this exists to allow us to do a case insensitive match on demand.
+     * However, as a utility, this exists to allow us to do a case insensitive match on demand.
      */
     public boolean containsIgnoreCase(String name) {
         return delegate.containsKey(name) || delegate.containsKey(name.toLowerCase(Locale.ROOT));
@@ -164,25 +162,20 @@ public class HttpQueryParams implements Cloneable {
 
     public String toEncodedString() {
         StringBuilder sb = new StringBuilder();
-        try {
-            for (Map.Entry<String, String> entry : entries()) {
-                sb.append(URLEncoder.encode(entry.getKey(), "UTF-8"));
-                if (!Strings.isNullOrEmpty(entry.getValue())) {
-                    sb.append('=');
-                    sb.append(URLEncoder.encode(entry.getValue(), "UTF-8"));
-                } else if (isTrailingEquals(entry.getKey())) {
-                    sb.append('=');
-                }
-                sb.append('&');
+        for (Map.Entry<String, String> entry : entries()) {
+            sb.append(URLEncoder.encode(entry.getKey(), StandardCharsets.UTF_8));
+            if (!Strings.isNullOrEmpty(entry.getValue())) {
+                sb.append('=');
+                sb.append(URLEncoder.encode(entry.getValue(), StandardCharsets.UTF_8));
+            } else if (isTrailingEquals(entry.getKey())) {
+                sb.append('=');
             }
+            sb.append('&');
+        }
 
-            // Remove trailing '&'.
-            if (sb.length() > 0 && '&' == sb.charAt(sb.length() - 1)) {
-                sb.deleteCharAt(sb.length() - 1);
-            }
-        } catch (UnsupportedEncodingException e) {
-            // Won't happen.
-            e.printStackTrace();
+        // Remove trailing '&'.
+        if (!sb.isEmpty() && '&' == sb.charAt(sb.length() - 1)) {
+            sb.deleteCharAt(sb.length() - 1);
         }
         return sb.toString();
     }
@@ -200,7 +193,7 @@ public class HttpQueryParams implements Cloneable {
         }
 
         // Remove trailing '&'.
-        if (sb.length() > 0 && '&' == sb.charAt(sb.length() - 1)) {
+        if (!sb.isEmpty() && '&' == sb.charAt(sb.length() - 1)) {
             sb.deleteCharAt(sb.length() - 1);
         }
         return sb.toString();
